2004-03-18  Drew Csillag  <drew@loki.sai.local>

	* pylibs/SocketMan/SocketMan.py (SocketMan.retrying_bind): added
	retrying_bind so can call with either UNIX or TCP socket for the
	retry stuff

2004-03-17  Drew Csillag  <drew@loki.sai.local>

	* SkunkWeb/util/precompile.py.in: now when creating shadow
	directories, it will copy non-compilable things, and copy symlinks
	(not what they point to) to the shadow directory.

2004-03-15  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/SocketMan/SocketMan.py (SocketMan.addConnection): now
	break out of the retry loop if the socket bind succeeds.

2004-03-15  Drew Csillag <drew@loki.sai.local>

	* pylibs/SocketMan/SocketMan.py (SocketMan.addConnection): now
	retries a few times on bind in case the original isn't quite dead
	yet.

	* SkunkWeb/SkunkWeb/LogObj.py (redirectStdOutErr): now checks to
	see if stderr/stdout already redirected before redirecting again
	
	* SkunkWeb/skunkweb.py.in: now logs the exception *before* writing
	that skunkweb died abnormally so that you actually get to see the
	exception if writing to stderr fails.  Also logs any exception if
	we get the "server exited wayyy too soon" message.

2004-03-14  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/xmlutils.py (XMLElement.__eq__, __ne__): added rich
	comparison methods for testing equality; fix for AttributeError.

2004-03-12  Jacob Smullyan <smulloni@smullyan.org>
	* pylibs/PyDO/PyDO2.py: removed use of string module
	in favor of string methods (stylistic nit-pick).

2004-03-02 Drew Csillag <drew@loki.sai.local>
	
	* SkunkWeb/Services/sessionHandler/FSSessionStore.py: removed one
	of the two leading underscores from get/setPickle

	* SkunkWeb/Services/auth/__init__.py (SessionAuthBase): now you
	can pass path, domain and secure to the constructor to set the 
	appropriate parameters on the session cookie

2004-03-01  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in (HTTPKeepaliveTimeout): document new default